discussion/kv_engine/124412/124412_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP MB-38326: Allow failed IORequests to be requeued

The magma code was not allowing failed IORequests to be re-queued as
part of the commitCallback.

As part of the change in order to support MockMagmaKVStore, I had to
shift some code around.

Change-Id: I13c0b5f699d888d2479d79b2daf8c7f2119e5657

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-06 23:29:28.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-07 00:08:39.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1585/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:58:20: error: unknown type name "Item" [clang-diagnostic-error]
    MetaData(const Item& it)
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:83:30: error: unknown type name "uint32_t" [clang-diagnostic-error]
    MetaData(bool isDeleted, uint32_t valueSize, int64_t seqno, Vbid vbid)
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:83:50: error: unknown type name "int64_t" [clang-diagnostic-error]
    MetaData(bool isDeleted, uint32_t valueSize, int64_t seqno, Vbid vbid)
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:83:65: error: unknown type name "Vbid" [clang-diagnostic-error]
    MetaData(bool isDeleted, uint32_t valueSize, int64_t seqno, Vbid vbid)
                                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:109:5: error: use of undeclared identifier "cb" [clang-diagnostic-error]
    cb::durability::Level getDurabilityLevel() const {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:113:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::string to_string(Operation op) const {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:128:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::string to_string() const {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:145:5: error: unknown type name "uint8_t" [clang-diagnostic-error]
    uint8_t metaDataVersion;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:146:5: error: unknown type name "int64_t" [clang-diagnostic-error]
    int64_t bySeqno;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:147:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t cas;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:148:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t revSeqno;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:149:5: error: unknown type name "uint32_t" [clang-diagnostic-error]
    uint32_t exptime;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:150:5: error: unknown type name "uint32_t" [clang-diagnostic-error]
    uint32_t flags;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:151:5: error: unknown type name "uint32_t" [clang-diagnostic-error]
    uint32_t valueSize;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:152:5: error: unknown type name "uint16_t" [clang-diagnostic-error]
    uint16_t vbid;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:153:5: error: unknown type name "uint8_t" [clang-diagnostic-error]
    uint8_t datatype;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:154:5: error: unknown type name "uint8_t" [clang-diagnostic-error]
    uint8_t deleted : 1;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:155:5: error: unknown type name "uint8_t" [clang-diagnostic-error]
    uint8_t deleteSource : 1;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:156:5: error: unknown type name "uint8_t" [clang-diagnostic-error]
    uint8_t operation : 2;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1585/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore-metadata.h:58:20:
error: unknown type name "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1585/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27362/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/102/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23406/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2996/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3049/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2989/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2042/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10847/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
